test/functional/should-fail/run/testrun0.f3
/*
 * Script with publicly exported elements requires run method
 * @test/fail
 */

import java.lang.System;

var v:Integer = 10;

package function f(i:Integer) { System.out.println(i); }

f(v);

